--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -8,17 +8,26 @@
 
 \:root
 
+	// brand
+
 	--color-blue: #215EC9
+	--color-yellow: #F9C74F
+	--color-green: #32A143
+
+	// utility
 	--color-blue-text: #fff
 	--color-blue-link: #4ff9ec
-	--color-green: #32A143
-	--color-yellow: #F9C74F
+	--color-blue-lines: #ffffff40
+	--color-green-text: #fff
+	--color-green-link: #4ff9ec
+	--color-green-lines: #ffffff40
+
+	// base
 
 	--color-text: #335
 	--color-text-soft: #a5a5a5
 	--color-links: var(--color-blue)
 	--color-lines: #f5f5f5
-	--var-logo-blur: 100px
 
 html,
 body
