--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -48,3 +48,22 @@
 		.svg
 
 			max-width: 400px
+
+	.didWeMissSomething
+
+		background: var(--color-green)
+		color: #fff
+		padding: 1rem
+		border-radius: .5rem
+
+		h4
+
+			font-weight: 600
+			margin: 0 0 10px 0
+			line-height: 1.5em
+			padding: 0 0 10px 0
+			border-bottom: 1px solid var(--color-green-lines)
+
+		a
+
+			color: var(--color-green-link)
