--- a/src/components/PageNavigation/PageNavigation.module.sass
+++ b/src/components/PageNavigation/PageNavigation.module.sass
@@ -6,10 +6,9 @@
 
 	a
 
-		padding: 0.3rem
+		padding: 0.5rem 0
 		display: block
 		border-bottom: 1px solid var(--color-lines)
-		font-size: 0.85rem
 
 		&:last-child
 
