--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -2,26 +2,26 @@
 
 	max-width: 1200px
 	margin: 0 auto
+	padding: var(--base-screen-padding)
 
 	> main
 
-		display: flex
+		@media screen and (min-width: 700px)
 
-	p:last-child
-
-		margin: 0
+			display: flex
 
 	.PageNavigation
 
-		flex-basis: 400px
+		flex: 1
 
-	.Page
+	main > div
 
-		padding-top: 0
+		flex: 2
 
 	.PageNavigation
 
-		margin-right: 1rem
+		margin-right: 2rem
+		margin-bottom: 2rem
 
 	.moreInformation
 
@@ -33,16 +33,10 @@
 
 			margin: 0
 
-	h2
-
-		font-weight: 600
-		font-size: 1.3rem
-		line-height: 1.2em
-
 	section
 
-		padding-bottom: 3rem
-		margin-bottom: 3rem
+		padding-bottom: 1rem
+		margin-bottom: 2rem
 		border-bottom: 1px solid var(--color-lines)
 
 		.svg
@@ -53,17 +47,18 @@
 
 		background: var(--color-green)
 		color: #fff
-		padding: 1rem
+		padding: 2rem 2rem 1rem 2rem
 		border-radius: .5rem
+
+		p
+
+			font-weight: 400
 
 		h4
 
-			font-weight: 600
-			margin: 0 0 10px 0
-			line-height: 1.5em
 			padding: 0 0 10px 0
 			border-bottom: 1px solid var(--color-green-lines)
 
 		a
 
-			color: var(--color-green-link)
+			--color-links: var(--color-green-link)
