glossary search wip

--- a/src/components/PageHeader/PageHeader.module.sass
+++ b/src/components/PageHeader/PageHeader.module.sass
@@ -1,19 +1,14 @@
 .PageHeader
 
-	padding: 0 0 3rem
+	padding: 0 0 2rem
+
+	span
+
+		font-weight: 300
+		font-size: 1rem
+		display: block
+		margin-bottom: 0.25rem
 
 	p
 
-		margin-top: 1rem
 		max-width: 700px
-
-	h1
-
-		border-left: 10px solid var(--color-yellow)
-		padding: 0 0 0 .5em
-		margin: 0
-
-		span
-
-			font-size: 1rem
-			display: block
