--- a/src/components/PageNavigation/PageNavigation.module.sass
+++ b/src/components/PageNavigation/PageNavigation.module.sass
@@ -2,13 +2,14 @@
 
 	h3
 
-		margin: 1rem 0
+		margin: 0 0 1rem 0
 
 	a
 
-		padding: 0.5rem 0
+		padding: 0.75rem 0
 		display: block
 		border-bottom: 1px solid var(--color-lines)
+		font-weight: 300
 
 		&:last-child
 
