--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -1,6 +1,6 @@
 .faqsPage
 
-	max-width: 1200px
+	max-width: 1400px
 	margin: 0 auto
 	padding: var(--base-screen-padding)
 
@@ -12,11 +12,13 @@
 
 	.PageNavigation
 
-		flex: 1
+		flex: 3
+		padding: var(--base-screen-padding-minor)
+		background: var(--color-island)
 
 	main > div
 
-		flex: 2
+		flex: 5
 
 	.PageNavigation
 
@@ -25,9 +27,10 @@
 
 	.moreInformation
 
-		background-color: var(--color-lines)
+		background: var(--color-island)
 		padding: 2rem
 		border-radius: .5rem
+		margin-bottom: 1rem
 
 		p
 
@@ -35,8 +38,8 @@
 
 	section
 
-		padding-bottom: 1rem
-		margin-bottom: 2rem
+		padding-bottom: 2rem
+		margin-bottom: 3rem
 		border-bottom: 1px solid var(--color-lines)
 
 		.svg
@@ -45,20 +48,6 @@
 
 	.didWeMissSomething
 
-		background: var(--color-green)
-		color: #fff
+		background: #2D2D39
 		padding: 2rem 2rem 1rem 2rem
 		border-radius: .5rem
-
-		p
-
-			font-weight: 400
-
-		h4
-
-			padding: 0 0 10px 0
-			border-bottom: 1px solid var(--color-green-lines)
-
-		a
-
-			--color-links: var(--color-green-link)
