--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -56,12 +56,16 @@
 			margin-right: 20px
 			background: var(--color-blue)
 			color: var(--color-blue-text)
-			&:hover
 
 .support
 
 	text-align: center
-	background: var(--color-blue)
+	background: #E0EAFC
+	border-top: 1px solid #3A91DC
+	border-bottom: 1px solid #3A91DC
+	text-shadow: 2px 2px 3px #00000055
+	background: radial-gradient(circle farthest-side, #3A91DC, var(--color-blue))
+	background-position: top center
 	padding: var(--base-screen-padding-minor) var(--base-screen-padding)
 	color: var(--color-blue-text)
 	text-align: center
