--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -47,6 +47,7 @@ html,
 body
 
 	background: var(--color-background)
+	background-image: radial-gradient(circle at 50% 0%,#182c4e, #10111f)
 	color: var(--color-text)
 	font-family: roboto
 	margin: 0
