--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -17,6 +17,13 @@
 		text-align: center
 		min-height: 60vh
 		color: #fff
+		background-repeat: repeat
+
+		background: #000000
+		border-radius: 2rem
+		margin: 0 2rem 2rem 2rem
+		background-image: radial-gradient(circle,#0b2961, #00042c)
+		background-position: 50% 90%
 
 		.creativeContainer
 
@@ -26,7 +33,6 @@
 
 			display: flex
 			justify-content: center
-			background-size: cover
 
 			.creativeContainer
 
@@ -57,49 +63,49 @@
 			background: var(--color-blue)
 			color: var(--color-blue-text)
 
-.support
+// .support
 
-	text-align: center
-	background: #E0EAFC
-	border-top: 1px solid #3A91DC
-	border-bottom: 1px solid #3A91DC
-	text-shadow: 2px 2px 3px #00000055
-	background: radial-gradient(circle farthest-side, #3A91DC, var(--color-blue))
-	background-position: top center
-	padding: var(--base-screen-padding-minor) var(--base-screen-padding)
-	color: var(--color-blue-text)
-	text-align: center
+// 	text-align: center
+// 	background: #E0EAFC
+// 	border-top: 1px solid #3A91DC
+// 	border-bottom: 1px solid #3A91DC
+// 	text-shadow: 2px 2px 3px #00000055
+// 	background: radial-gradient(circle farthest-side, #3A91DC, var(--color-blue))
+// 	background-position: top center
+// 	padding: var(--base-screen-padding-minor) var(--base-screen-padding)
+// 	color: var(--color-blue-text)
+// 	text-align: center
 
-	p
+// 	p
 
-		margin: 0
-		font-size: 16px
+// 		margin: 0
+// 		font-size: 16px
 
-	a
+// 	a
 
-		--color-links: var(--color-blue-link)
+// 		--color-links: var(--color-blue-link)
 
-	h3
+// 	h3
 
-		border: 0
-		padding: 0
+// 		border: 0
+// 		padding: 0
 
-	svg
+// 	svg
 
-		width: 60px
-		fill: #fff
-		margin: 0 30px 0 0
+// 		width: 60px
+// 		fill: #fff
+// 		margin: 0 30px 0 0
 
-	& > div
+// 	& > div
 
-		margin: 0 auto
-		flex-direction: row
-		display: inline-flex
-		text-align: left
+// 		margin: 0 auto
+// 		flex-direction: row
+// 		display: inline-flex
+// 		text-align: left
 
-		div
+// 		div
 
-			max-width: 550px
+// 			max-width: 550px
 
 .heroMessage
 
@@ -117,6 +123,7 @@
 	.cta
 
 		margin-top: 2rem
+		text-shadow: none
 
 .chatPersonA,
 .chatPersonB
