--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -18,11 +18,12 @@
 		min-height: 60vh
 		color: #fff
 		background-repeat: repeat
-
 		background: #000000
 		border-radius: 2rem
 		margin: 0 2rem 2rem 2rem
 		background-image: radial-gradient(circle,#0b2961, #00042c)
+		border: 1px solid #061342
+		box-shadow: 0px 0 20px #00000066
 		background-position: 50% 90%
 
 		.creativeContainer
