minor tone tweeks

--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -23,7 +23,7 @@
 	--color-green-text: #fff
 	--color-green-link: #fff5b3
 	--color-green-lines: #ffffff40
-	--color-island: #1F1D2A
+	--color-island: #1012203d
 
 	// Screen sizing
 
