--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -22,7 +22,7 @@
 		background: #000000
 		border-radius: 2rem
 		margin: 0 2rem 2rem 2rem
-		background-image: radial-gradient(circle,#0b2961, #00042c)
+		background-image: radial-gradient(circle at 80% 50%,#0b2961, #00042c)
 		background-position: 50% 90%
 
 		.creativeContainer
