--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -48,6 +48,7 @@
 
 	.didWeMissSomething
 
-		background: #2D2D39
+		background: #204149
 		padding: 2rem 2rem 1rem 2rem
-		border-radius: .5rem
+		border-radius: 1rem
+		border: none
