--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -40,7 +40,7 @@
 	--color-text: #fff
 	--color-text-soft: #8f91ac
 	--color-links: #84beff
-	--color-lines: #3c3e5a
+	--color-lines: #215EC922
 	--color-background: #191923
 
 html,
