--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -51,6 +51,7 @@
 					max-width: 80%
 
 		a
+
 			--color-links: #84beff
 
 		.btnStartLearning
@@ -81,6 +82,13 @@
 
 		margin-top: 2rem
 		text-shadow: none
+
+		@media screen and ( max-width: 350px )
+
+			a
+
+				padding: 1rem
+				display: block
 
 .creativeContainer
 
