--- a/src/pages/resources/youtube.module.sass
+++ b/src/pages/resources/youtube.module.sass
@@ -6,12 +6,30 @@
 
 	display: grid
 	grid-template-columns: repeat(auto-fill,minmax(300px,1fr))
-	grid-gap: 2rem
+	grid-gap: 1rem
 
 .youtubeChannel
 
 	background: var(--color-island)
 	padding: 2rem
+	border-radius: 1rem
+	flex-grow: 1
+	display: flex
+	flex-direction: column
+
+	> div
+
+		flex-grow: 1
+		display: flex
+		flex-direction: column
+
+		p
+
+			flex-grow: 1
+
+		a
+
+			flex-basis: 2rem
 
 	header
 
