--- a/src/components/layout/Layout.module.sass
+++ b/src/components/layout/Layout.module.sass
@@ -58,7 +58,7 @@ body.scrollLock
 
 			flex-basis: 45px
 			fill: #888
-			margin-right: 2rem
+			margin-right: 1rem
 			display: none
 
 			@media screen and (min-width: 375px)
@@ -81,12 +81,12 @@ body.scrollLock
 
 			sub
 
-				display: none
+				display: block
 				font-weight: 300
-				font-size: 1rem
+				font-size: .8rem
 				letter-spacing: 0
 				margin-top: .25em
-				line-height: 1em
+				line-height: 1.2em
 				color: var(--color-text-soft)
 
 		> nav
