--- a/src/pages/resources/youtube.module.sass
+++ b/src/pages/resources/youtube.module.sass
@@ -2,6 +2,14 @@
 
 	max-width: 100%
 
+.YouTubeHeader
+
+	text-align: center
+
+	p
+
+		margin: 0 auto
+
 .channelListing
 
 	display: grid
@@ -41,7 +49,7 @@
 	.channelLink
 
 		padding: .2rem 1rem
-		background: #c4302b
+		background: #215ec9
 		color: #fff
 		border-radius: .5rem
 		display: inline-flex
