--- a/src/pages/resources/books.module.sass
+++ b/src/pages/resources/books.module.sass
@@ -1,3 +1,11 @@
+.booksHeader
+
+	text-align: center
+
+	p
+
+		margin: 0 auto
+
 .booksPage
 
 	width: 100%
@@ -9,7 +17,7 @@
 	grid-template-columns: repeat(auto-fill,minmax(300px,1fr))
 	grid-gap: 1rem
 
-.books
+.book
 
 	background: var(--color-island)
 	padding: 2rem
@@ -17,6 +25,11 @@
 	p
 
 		margin: 0
+
+	a
+
+		display: block
+		margin-top: 0.5rem
 
 	.authors
 
