--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -32,6 +32,14 @@
 		border-radius: .5rem
 		margin-bottom: 1rem
 
+		div
+
+			margin-bottom: 0.5rem
+
+			&:last-child
+
+				margin: 0
+
 		p
 
 			margin: 0
