--- a/src/pages/resources/youtube.module.sass
+++ b/src/pages/resources/youtube.module.sass
@@ -12,9 +12,11 @@
 
 .channelListing
 
-	display: grid
-	grid-template-columns: repeat(auto-fill,minmax(300px,1fr))
-	grid-gap: 1rem
+	@media screen and (min-width: 500px)
+
+		display: grid
+		grid-template-columns: repeat(auto-fill,minmax(350px,1fr))
+		grid-gap: 1rem
 
 .youtubeChannel
 
@@ -74,8 +76,13 @@
 
 	.channelImage
 
-		flex-basis: 65px
 		margin-right: 1rem
+
+		flex-basis: 65px
+
+		@media screen and (min-width: 500px)
+
+			flex-basis: 100px
 
 		> div
 
