More terms and formatting updates

--- a/plop-templates/glossaryTerm/glossaryTerm.hbs
+++ b/plop-templates/glossaryTerm/glossaryTerm.hbs
@@ -2,5 +2,8 @@
 title: {{title}}
 aka:
 alsoSee:
+# - type: ext
+#  linkText: {{title}} on Wikipedia
+#  link: 'https://en.wikipedia.org/wiki/Tu_quoque'
 ---
 {{definition}}
