--- a/src/pages/learn/learn.module.sass
+++ b/src/pages/learn/learn.module.sass
@@ -1,6 +1,19 @@
 .leanPage
 
 	display: block
+	max-width: 1100px
+
+	article
+
+		display: flex
+
+		nav
+
+			flex: 1
+
+		main
+
+			flex: 2
 
 	svg
 
