--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -223,3 +223,8 @@ input
 		color: var(--color-text-soft)
 		font-weight: 100
 		font-size: 1rem
+
+:global(.termToHighlight)
+
+	background: var(--color-yellow)
+	color: #000
