--- a/src/pages/resources/books.module.sass
+++ b/src/pages/resources/books.module.sass
@@ -6,6 +6,13 @@
 
 		margin: 0 auto
 
+.bookSearch
+
+	max-width: 500px
+	margin: 0 auto
+	margin-bottom: 2rem
+	display: block
+
 .booksPage
 
 	width: 100%
