--- a/src/pages/resources/communities.module.sass
+++ b/src/pages/resources/communities.module.sass
@@ -20,14 +20,15 @@
 
 		div
 
-			flex: 1
+			flex-grow: 1
 
 		svg
 
+			flex-basis: 2rem
 			fill: #fff
 			display: block
-			flex-basis: 2rem
 			margin-right: 1rem
+			width: 2rem
 
 	main
 
