book filter on subtitle

--- a/src/pages/resources/communities.module.sass
+++ b/src/pages/resources/communities.module.sass
@@ -18,13 +18,12 @@
 			jutify-content: center
 			align-items: center
 
-		div
+		div.linkText
 
 			flex-grow: 1
 
 		svg
 
-			flex-basis: 2rem
 			fill: #fff
 			display: block
 			margin-right: 1rem
