--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -116,45 +116,46 @@ h6,
 :global(.displayHeading3),
 :global(.displayHeading4),
 :global(.displayHeading5),
-:global(.displayHeading6)
+:global(.displayHeading6),
+:global(.displayHeading7)
 
 	font-weight: 100
+	padding: 0
+	border: none
 
 :global(.displayHeading1),
 :global(h1.displayHeading)
 
-	font-size: 2.5rem
 	font-size: 5rem
 
 :global(.displayHeading2),
 :global(h2.displayHeading)
 
-	font-size: 2rem
 	font-size: 4.5rem
 
 :global(.displayHeading3),
 :global(h3.displayHeading)
 
-	font-size: 1.75rem
 	font-size: 4rem
 
 :global(.displayHeading4),
 :global(h4.displayHeading)
 
-	font-size: 1.5rem
 	font-size: 3.5rem
 
 :global(.displayHeading5),
 :global(h5.displayHeading)
 
-	font-size: 1.25rem
 	font-size: 3rem
 
 :global(.displayHeading6),
 :global(h6.displayHeading)
 
-	font-size: 1rem
 	font-size: 2.5rem
+
+:global(.displayHeading7)
+
+	font-size: 2rem
 
 a
 
