--- a/src/pages/resources/books.module.sass
+++ b/src/pages/resources/books.module.sass
@@ -6,6 +6,26 @@
 
 		margin: 0 auto
 
+.keywords
+
+	margin-top: 0.5rem
+	font-size: 0.8rem
+	color: var(--color-text-soft)
+
+	span
+
+		margin-right: 0.25em
+
+		&:after
+
+			content: ', '
+
+		&:last-child
+
+			&:after
+
+				content: ''
+
 .bookSearch
 
 	max-width: 500px
