Updated lint rules

--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -3,50 +3,18 @@
 	--var-message-spacing: 20px
 	--var-message-spacing-negative: calc(var(--var-message-spacing) * -1)
 
-	min-height: calc(100vh - 60px)
-	display: flex
-	flex-direction: column
-
 	@media screen and ( min-width: 1100px )
 
 		--var-message-spacing: 100px
 
-	.minBanners
-
-		display: flex
-		padding: 0 2rem
-		gap: 2rem
-
-		> a
-
-			border-radius: 2rem
-			padding: 2rem
-			flex: 1
-			height: 15rem
-			background-image: linear-gradient(160deg, #002f84, #011538)
-			color: #fff
-			border: 1px solid #011b4a
-			box-shadow: 0px 0 20px #00000066
-
-			&:hover
-
-				cursor: pointer
-				text-decoration: none
-
 	.homepageBanner
 
-		flex-grow: 1
 		text-align: center
-		min-height: 60vh
-		color: #fff
-		background-repeat: repeat
-		background: #000000
 		border-radius: 2rem
 		margin: 0 2rem 2rem 2rem
 		background-image: radial-gradient(circle at 80% 50%, #0b2961, #00042c)
 		border: 1px solid #061342
 		box-shadow: 0px 0 20px #00000066
-		background-position: 50% 90%
 
 		.creativeContainer
 
@@ -78,14 +46,39 @@
 
 		.btnStartLearning
 
-			display: inline-block
-			padding: 10px 15px
-			border: 3px solid var(--color-blue)
+			background: var(--color-blue)
 			border-radius: 10px
+			border: 3px solid var(--color-blue)
+			color: var(--color-blue-text)
+			display: inline-block
 			font-weight: bold
 			margin-right: 20px
-			background: var(--color-blue)
-			color: var(--color-blue-text)
+			padding: 10px 15px
+
+	.minBanners
+
+		--var-minWidth: calc(320px - 4rem)
+
+		display: grid
+		padding: 0 2rem
+		gap: 2rem
+		grid-template-columns: repeat(auto-fit,minmax(var(--var-minWidth),1fr))
+
+		> a
+
+			border-radius: 2rem
+			padding: 2rem
+			flex: 1
+			height: 15rem
+			background-image: linear-gradient(160deg, #002f84, #011538)
+			color: #fff
+			border: 1px solid #011b4a
+			box-shadow: 0px 0 20px #00000066
+
+			&:hover
+
+				cursor: pointer
+				text-decoration: none
 
 .heroMessage
 
