--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -56,7 +56,7 @@
 
 	.didWeMissSomething
 
-		background: #204149
+		background: #4f5e783d
 		padding: 2rem 2rem 1rem 2rem
 		border-radius: 1rem
 		border: none
