--- a/src/pages/resources/podcasts.module.sass
+++ b/src/pages/resources/podcasts.module.sass
@@ -23,6 +23,7 @@
 
 			display: block
 			background: var(--color-island)
+			border: 1px solid #ffffff10
 			padding: 2rem
 			text-align: center
 			color: #fff
