--- a/src/components/layout/base.sass
+++ b/src/components/layout/base.sass
@@ -23,7 +23,7 @@
 	--color-green-text: #fff
 	--color-green-link: #fff5b3
 	--color-green-lines: #ffffff40
-	--color-island: #1012203d
+	--color-island: #2327413d
 
 	// Screen sizing
 
@@ -47,10 +47,10 @@ html,
 body
 
 	background: #10111f
-	background-image: radial-gradient(ellipse at 50% 0%,#182c4e, #10111f)
+	background-image: linear-gradient(0deg, #10111f 0%, #10111f00 30%, #10111f00 100%), radial-gradient(ellipse at 50% 0%,#182c4e, #10111f),
 	background-size: 100% 100vh
 	background-repeat: no-repeat
-	background-attachment: fixed
+	background-attachment: cover
 	color: var(--color-text)
 	font-family: roboto
 	margin: 0
