--- a/src/pages/resources/youtube.module.sass
+++ b/src/pages/resources/youtube.module.sass
@@ -21,6 +21,7 @@
 .youtubeChannel
 
 	background: var(--color-island)
+	border: 1px solid #ffffff10
 	padding: 2rem
 	border-radius: 1rem
 	flex-grow: 1
