--- a/src/pages/faqs/faqs.module.sass
+++ b/src/pages/faqs/faqs.module.sass
@@ -47,7 +47,7 @@
 	section
 
 		padding-bottom: 2rem
-		margin-bottom: 3rem
+		padding-top: 3rem
 		border-bottom: 1px solid var(--color-lines)
 
 		.svg
@@ -56,7 +56,7 @@
 
 	.didWeMissSomething
 
-		background: #4f5e783d
+		background: var(--color-island)
 		padding: 2rem 2rem 1rem 2rem
 		border-radius: 1rem
 		border: none
