--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -13,8 +13,8 @@
 		border-radius: 2rem
 		margin: 0 2rem 2rem 2rem
 		background-image: radial-gradient(circle at 80% 50%, #0b2961, #00042c)
-		border: 1px solid #061342
-		box-shadow: 0px 0 20px #00000066
+		border: 1px solid #ffffff10
+		box-shadow: 0.25rem 0.25rem 1rem #000000
 
 		.creativeContainer
 
@@ -72,8 +72,8 @@
 			height: 15rem
 			background-image: linear-gradient(160deg, #002f84, #011538)
 			color: #fff
-			border: 1px solid #011b4a
-			box-shadow: 0px 0 20px #00000066
+			border: 1px solid #ffffff10
+			box-shadow: 0.25rem 0.25rem 1rem #000000
 
 			&:hover
 
@@ -118,6 +118,7 @@
 		font-size: 1.2rem
 		font-weight: 400
 		box-shadow: 4px 4px 10px rgba(#000,0.6)
+		box-shadow: 0.25rem 0.25rem 0.5rem #000000aa
 		position: relative
 		color: #fff
 
