--- a/src/components/layout/Layout.module.sass
+++ b/src/components/layout/Layout.module.sass
@@ -53,6 +53,7 @@ body.scrollLock
 		padding: var(--base-screen-padding-minor) var(--base-screen-padding)
 		width: 100%
 		user-select: none
+		height: 6rem
 
 		svg.logo
 
