--- a/src/pages/index.module.sass
+++ b/src/pages/index.module.sass
@@ -15,6 +15,7 @@
 		background-image: radial-gradient(circle at 80% 50%, #0b2961, #00042c)
 		border: 1px solid #ffffff10
 		box-shadow: 0.25rem 0.25rem 1rem #000000
+		min-height: calc(100vh - 8rem)
 
 		.creativeContainer
 
